fix image stretch

--- a/public/assets/css/blogpage.css
+++ b/public/assets/css/blogpage.css
@@ -48,21 +48,36 @@ main {
 
 /* Blog */
 
+.blog-content{
+    display: flex;
+    flex-direction: column;
+    gap: 2rem;
+}
 .blog-img {
+
   width: 100%;
-  height: 800px;
+  height: 500px;
+  display: flex;
+  justify-content: center;
 }
 
 .blog-img img {
-  height: 100%;
-  width: 100%;
+max-width: 400px;
+height: 100%;
+width: 100%;
 }
 
 .socials {
   padding: 1rem;
   color: #fff;
+  display: block;
   background-color: cornflowerblue;
   width: fit-content;
   border-radius: 20px;
   cursor: pointer;
+}
+
+.further-read-link a{
+    text-decoration: underline;
+    color: cornflowerblue;
 }
